src/test/Success/test_func2.c
int add(int x, int y){
    return x + y;
}

int main(){
    int a = 1;
    int b = 2;
    int c = add(a, b);

    return c;
}