src/test/Fail/test_type1.c
int a(){
    return 1;
}

int main(){
    a = 1;
}